SF Primes/src/objects/Employee_Tenure__c.object
<CustomObject>
    <description>Sales title/region tenure record</description>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <referenceTo>Employee_Information__c</referenceTo>
        <relationshipLabel>Employee Tenure</relationshipLabel>
        <relationshipName>R00N40000001lhIHEAY</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Employee Manager</description>
        <label>Manager</label>
        <referenceTo>Employee_Information__c</referenceTo>
        <relationshipLabel>Employee Tenure (Manager)</relationshipLabel>
        <relationshipName>Employee_Tenure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position_End_Date__c</fullName>
        <label>Position End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Start_Date__c</fullName>
        <label>Position Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoffman Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightspeed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSP Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPX_Tenure_CreateDate__c</fullName>
        <label>SPX Tenure CreateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SPX_Tenure_ID__c</fullName>
        <label>SPX Tenure ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Employee Tenure</label>
    <nameField>
        <displayFormat>ID {00000}</displayFormat>
        <label>EmpTenure</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Tenure</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>